--- a/publications.html
+++ b/publications.html
@@ -159,7 +159,8 @@
                                 Experience at the US-Mexico Border: Functional Alignment, Summaries, and Structural Breaks</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri, Curtis Smith<br>
                                 <em>Chance (American Statistical Association)</em>, Under review<br>
-                                <li>Performed functional data analysis and curve alignment to examine emotional trajectories in written reflections from a community-based learning trip to the US-Mexico border. Sentiment was quantified, then analyzed through amplitude and phase variations to detect clusters and structural breaks.<br>
+                                <br><br>
+                                Performed functional data analysis and curve alignment to examine emotional trajectories in written reflections from a community-based learning trip to the US-Mexico border. Sentiment was quantified, then analyzed through amplitude and phase variations to detect clusters and structural breaks.<br>
                                 
                             </td>
                         </tr>
