--- a/index.html
+++ b/index.html
@@ -122,19 +122,11 @@
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <span class="papertitle">Exploring Consumer Preferences</span></a><br>
                                 Bentley-Gallup Force for Good Survey<br>
-                                Performed hypothesis testing on randomized survey responses to assess question framing impact.<br>
+                                Analyzed a randomized module within the Bentley-Gallup survey, to investigate individuals’ willingness-to-pay for ethical business practices. Examined how values and context influence consumer choice by varying information about companies’ social responsibility and measuring participants’ contribution decisions. <br>
                                 <a href="https://github.com/baharez/Bentley-Gallup/blob/abaaa3a2e0d7e7453407afa8da4ae934fa502002/Gallup_Bentley%20Experiment.R"> R Script</a>
                             </td>
                         </tr>
-                        <tr>
-                            <td style="padding:8px;width:20%;vertical-align:middle">
-                                <img src="images/sat_scores.jpg" width="160">
-                            </td>
-                            <td style="padding:8px;width:80%;vertical-align:middle">
-                                <span class="papertitle">SAT Scores and Racial Composition Analysis</span></a><br>
-                                Conducted regression analysis on Massachusetts high school data to examine demographic influences.<br>
-                                <a href="data/Mass Public High School SAT Score Report.pdf"> Report</a>
-                            </td>
+                        
                         </tr>
                     </tbody>
                 </table>
