--- a/publications.html
+++ b/publications.html
@@ -122,7 +122,7 @@
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <span class="papertitle">Marking Contemporary America's Attitudinal Stance Towards Modern Businesses: a Bayesian Attempt to Detect Deviation Patterns Based on Demographics and Politics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
-                                <em>Chance (American Statistical Association)</em>, Accepted<br>
+                                <em>Chance, Volume 38.2, 2025 (American Statistical Association)</em>, Accepted<br>
                                 <br>
                                 Analyzed over 5,000 Gallup-Bentley survey responses to explore how Americans’ views on business ethics shift across demographic and political lines. Using Bayesian inference and latent space modeling, estimated the probability that large segments of the population support certain ethical practices, uncovering gaps between ideals and perceptions.<br>
                                 <a href="#">Paper</a>
